log
Thu 16 May 2024 05:28:24 PM UTC: 
 tests:  0|5
total_score: 0/70
1ba9f0a
Thu 16 May 2024 05:29:24 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
789756d
